tests/fixtures/nupm/rejected/module-with-scripts/script.nu
export def main [] { "auxiliary script" }
